fixed sign in wrapping issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,6 +68,12 @@ nav>* {
     display: none;
 }
 
+#signIn {
+    width: 70px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .ipc-icon {
     position: relative;
     top: .4em;
